<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pasin.hci.Menu">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:id="@+id/linearLayoutMenu"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="10dp" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_menu"
                android:textStyle="bold"
                android:id="@+id/headmenu"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botton_tv"
                android:textStyle="bold"
                android:id="@+id/button1"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botton_digital_tv"
                android:id="@+id/button2"
                android:textStyle="bold"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botton_audio"
                android:id="@+id/button3"
                android:textStyle="bold"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botton_vdo"
                android:id="@+id/button4"
                android:textStyle="bold"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botton_x_tream"
                android:id="@+id/button5"
                android:textSize="40sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
