<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pasin.hci.Main">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:id="@+id/linearLayoutMainMenu"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:paddingTop="20dp"
                android:paddingBottom="0dp" />

            <!-- android:drawableTop="@drawable/boss_f_001" -->

            <Button
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/font_awesome_facebook"
                android:textStyle="bold"
                android:textSize="40sp"
                android:background="#3b5998"
                android:textColor="#f1f1f1"
                android:gravity="left"
                android:paddingLeft="40dp"
                android:onClick="loginwithfacebook"/>

            <Button
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/font_awesome_google"
                android:textStyle="bold"
                android:textSize="40sp"
                android:background="#d34836"
                android:textColor="#f1f1f1"
                android:gravity="left"
                android:paddingLeft="40dp" />

            <TextView
                android:id="@+id/font_awesome_android_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/font_awesome_android_icon"
                android:textColor="#80d204"
                android:textSize="50sp"
                android:layout_gravity="center_horizontal" />





        </LinearLayout>
    </ScrollView>
</RelativeLayout>
